# pepper-thesis

./: .gitignore  CMakeLists.txt  debug.txt  make_images_SV.sh  make_images_hg002.sh  make_images_negative.sh  requirements.txt
PEPPER_TEST_IMAGES/: pepper_all_candidates.vcf.gz.tbi
pepper_variant/modules/argparse/: SetParameters.py
pepper_variant/modules/cpp/: bam_handler.cpp  bam_handler.h  colors.h  region_summary.cpp  region_summary.h
pepper_variant/modules/python/: AlignmentSummarizer.py  ImageGenerationUI.py  Options.py  RunInference.py  VcfWriter_candidates.py
pepper_variant/modules/python/models/: ThesisModel.py
